modified:   photo 	new file:   source/_posts/HTML-1.md 	modified:   source/_posts/markdown.md 	modified:   "source/_posts/\345\201\207\345\246\202\347\273\231\346\210\221\344\270\200\347\231\276\344\270\207.md" 	new file:   "source/_posts/\345\215\232\345\256\242.md" 	modified:   "source/_posts/\345\244\234.md" 	new file:   "source/_posts/\345\272\237\345\234\237.md" 	new file:   "source/_posts/\346\201\266.md" 	new file:   "source/_posts/\350\256\241\347\256\227\346\234\272\347\275\221\347\273\234.md" 	new file:   "source/_posts/\351\200\220\345\244\251.md" 	new file:   "source/_posts/\351\200\220\345\244\251/A.jfif" 	new file:   source/assets/assets/img/empty.png 	new file:   source/photos/data.json 	modified:   source/photos/index.ejs 	modified:   source/photos/ins.css 	modified:   source/photos/ins.js 	modified:   source/photos/ins.json 	modified:   source/photos/lazyload.min.js
	modified:   photo (untracked content)
	modified:   themes/next (modified content, untracked content)
	modified:   themes/yilia (modified content, untracked content)

--- a/source/_posts/假如给我一百万.md
+++ b/source/_posts/假如给我一百万.md
@@ -15,9 +15,7 @@ categories:
 
 我不知道在未来，在我步入社会，工作结婚后我会不会改口，但至少现在我不会。
 
-为什么？
-
- <!--more-->
+为什么？ <!--more-->
 
 拿到一百万怎么花？先把购物车清空！买一栋豪宅住！到国外旅游玩乐！或者至少分一半给父母！
 
