--- a/source/_posts/夜.md
+++ b/source/_posts/夜.md
@@ -14,6 +14,7 @@ categories:
 细心将房间里一切发光的东西关闭，眼皮顺势低垂着。光明笼罩着我的脑子太久了，闪光刺激着我的双眼太久了.
 手机，电脑，书本，反射出的光亮都如光纤般将信息塞入我的大脑，太亮，太亮，令人睁不开眼。
 
+<!--more-->
 关灯吧。
 一瞬间的过曝。
 一切凐灭于黑暗，唯有空虚存留。
